[B]Advanced Emulator Launcher | version 0.9.5 | xx December 2017[/B]

WIP      User Parent/Clone substituted artwork. For example, most trailers are only available for
         the Parent machine and can be used by Clone machines.

WIP      Port the file scanner cache from AEL to AML. This will increase the scanning speed a lot!


[B]Advanced Emulator Launcher | version 0.9.4 | xx October 2017[/B]

WIP      Improve AML wiki in Github and move documentation from Kodi forum to Github wiki.

FEATURE  Support bestgames.ini and series.ini.

FEATURE  Generate machine plot from MAME XMl information.

FEATURE  New Main filters: Normal and Unusual.

FEATURE  Show MAME ROMs.

FEATURE  Audit MAME ROMs.

WIP      Show SL ROMs.

WIP      Audit SL ROMs.

FEATURE  Display MAMEINFO.DAT information.

FEATURE  Display HISTORY.DAT in information.

FEATURE  Display gameinit.dat in information.

FEATURE  Display command.dat in information.

WIP      At launching, do not check ROMs for machines which doesn't have ROMs.
         Requires loading machines database, which will slow down launching process a lot!
         A hashed database of machines is necessary to speed up plugin.

FEATURE  Allow user to choose default assets as AEL does in addon seetings.

FEATURE  Trailer support in MAME machines and Software Lists.

WIP      Manage SL Favourites.


[B]Advanced Emulator Launcher | version 0.9.3 | 30 May 2017[/B]

FEATURE  Ability to choose default Icon and Fanart for MAME and SL ROMs in addon settings.

FEATURE  "Parent only" view mode.

FEATURE  Plugin speed has been increased a lot owing to a brand new database design.

FEATURE  Unified catalog system and new machine rendering method.
         Requires wiping of ADDON_DATA_DIR to avoid problems.

FEATURE  Properties can be configured for every individual list in AML.

FEATURE  New Status Device flag. Marks wheter a device is mandatory or not.

FEATURE  Show database statistics.

FEATURE  Favourite MAME machines.
