@@ -1,25 +1,43 @@
 # Advanced MAME Launcher #
 
-Advance MAME Launcher is a MAME front end for Kodi.
+Advance MAME Launcher is a MAME front end for Kodi. AML has support for both MAME archade machines
+and Software Lists.
+
+## Kodi forum thread ##
+
+A *Getting Started* guide with installation instructions and more information about AML can be 
+found in the [Advanced MAME Launcher thread] in the Kodi forum. Feel free to ask there any 
+AML-related question you may have.
+
+[Advanced MAME Launcher thread]: https://forum.kodi.tv/showthread.php?tid=304186
 
 ## Installing the latest released version ##
 
-Follow [this link](https://github.com/Wintermute0110/repository.wintermute0110/tree/master/plugin.program.advanced.MAME.launcher) 
-and download the ZIP file of the version you want.
+Go to the [AML ZIP repository] and download the ZIP file of the AML version you want to install.
+To install AML, in Kodi home screen go to `Addons`, then browse to the top and click on the
+`box` icon to open the `Add-on browser` window. There, click on `Install from zip file` and browse
+and select the AML ZIP file.
+
+If you get a warning message dialog `For security, installation of add-ons from unknown sources
+is disabled.` then click on `Settings` button and then activate the option `Unknown sources`.
+
+Note that this instructions are for the default Kodi skin Estuary. In other skins menu names could
+be slightly different.
+
+[AML ZIP repository]: https://github.com/Wintermute0110/repository.wintermute0110/tree/master/plugin.program.advanced.MAME.launcher
 
 ## Installing the latest development version ##
 
-It is important that you follow this instructions or Advanced Emulator Launcher won't work well.
+It is important that you follow this instructions or Advanced MAME Launcher won't work well.
 
   1) In this page click on the green button `Clone or Download` --> `Download ZIP`
 
-  2) Uncompress this ZIP file. This will create a folder named `plugin.program.advanced.MAME.launcher-master`
+  2) Uncompress this ZIP file. This will create a folder named `plugin.program.AML-master`
 
-  3) Rename that folder to `plugin.program.advanced.MAME.launcher`
+  3) Rename that folder to `plugin.program.AML`
 
   4) Compress that folder again into a ZIP file. 
 
-  5) In Kodi, use that ZIP file (and not the original one) to install the plugin in `System` --> `Addons` 
-     --> `Install from ZIP file`.
+  5) In Kodi, use that ZIP file (and not the original one) to install the addon.
 
   6) You are done!
