@@ -1,8 +1,5 @@
 ﻿<?xml version="1.0" encoding="UTF-8" standalone="yes"?>
-<addon id="plugin.program.advanced.MAME.launcher"
-       name="Advanced MAME Launcher"
-       version="0.9.4~alpha"
-       provider-name="Wintermute0110">
+<addon id="plugin.program.AML" name="Advanced MAME Launcher" version="0.9.4~alpha" provider-name="Wintermute0110">
   <requires>
     <!-- 2.25.0 Krypton 17.x -->
     <import addon="xbmc.python" version="2.25.0" />
@@ -12,13 +9,13 @@
   </extension>
   <extension point="xbmc.addon.metadata">
     <summary lang="en">Kodi meets MAME!</summary>
-    <description lang="en">MAME front-end for Kodi. Supports both MAME arcade machines and MAME Software Lists.</description>
+    <description lang="en">MAME front-end for Kodi. Supports both MAME machines and MAME Software Lists.</description>
     <platform>all</platform>
     <license>GNU General Public License version 2</license>
     <email>wintermute0110@gmail.com</email>    
     <forum>http://forum.kodi.tv/showthread.php?tid=304186</forum>
-    <website>https://github.com/Wintermute0110/plugin.program.advanced.MAME.launcher/wiki</website>
-    <source>https://github.com/Wintermute0110/plugin.program.advanced.MAME.launcher</source>
+    <website>https://github.com/Wintermute0110/plugin.program.AML/wiki</website>
+    <source>https://github.com/Wintermute0110/plugin.program.AML/</source>
     <assets>
       <icon>media/icon.png</icon>
       <fanart>media/fanart.jpg</fanart>
